tests/suite/fail/generated/types/fail_logical_string_and_true.ny
fn main() {
    let _ = "a" && true //~ ERROR requires bool
}
